doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Greenfoot\jdk\bin\javadoc.exe
-sourcepath
C:\Users\conra\Documents\GitHub\Greenfoot-Project
-source
11
-classpath
C:\Program Files\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext.jar;C:\Program Files\Greenfoot\lib\junit-4.11.jar;C:\Program Files\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\classgraph-4.2.6.jar;C:\Program Files\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\Greenfoot\lib\xom-1.2.9.jar;C:\Program Files\Greenfoot\lib\lang-stride.jar;C:\Program Files\Greenfoot\lib\nsmenufx-2.1.4.jar;C:\Program Files\Greenfoot\lib\richtextfx-fat-0.9.0.jar;C:\Program Files\Greenfoot\lib\guava-17.0.jar;C:\Program Files\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\Greenfoot\lib\httpmime-4.1.1.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\conra\Documents\GitHub\Greenfoot-Project
-d
C:\Users\conra\Documents\GitHub\Greenfoot-Project\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
Greenfoot-Project
-windowtitle
Greenfoot-Project
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
C:\Users\conra\Documents\GitHub\Greenfoot-Project/border.java
C:\Users\conra\Documents\GitHub\Greenfoot-Project/StartScreen.java
C:\Users\conra\Documents\GitHub\Greenfoot-Project/laser.java
C:\Users\conra\Documents\GitHub\Greenfoot-Project/PowerUps.java
C:\Users\conra\Documents\GitHub\Greenfoot-Project/Spaceship.java
C:\Users\conra\Documents\GitHub\Greenfoot-Project/Label.java
C:\Users\conra\Documents\GitHub\Greenfoot-Project/EndScreen.java
C:\Users\conra\Documents\GitHub\Greenfoot-Project/asteroid.java
C:\Users\conra\Documents\GitHub\Greenfoot-Project/MyWorld.java
<---- end of javadoc command ---->
Loading source file C:\Users\conra\Documents\GitHub\Greenfoot-Project\border.java...
Loading source file C:\Users\conra\Documents\GitHub\Greenfoot-Project\StartScreen.java...
Loading source file C:\Users\conra\Documents\GitHub\Greenfoot-Project\laser.java...
Loading source file C:\Users\conra\Documents\GitHub\Greenfoot-Project\PowerUps.java...
Loading source file C:\Users\conra\Documents\GitHub\Greenfoot-Project\Spaceship.java...
Loading source file C:\Users\conra\Documents\GitHub\Greenfoot-Project\Label.java...
Loading source file C:\Users\conra\Documents\GitHub\Greenfoot-Project\EndScreen.java...
Loading source file C:\Users\conra\Documents\GitHub\Greenfoot-Project\asteroid.java...
Loading source file C:\Users\conra\Documents\GitHub\Greenfoot-Project\MyWorld.java...
C:\Users\conra\Documents\GitHub\Greenfoot-Project\MyWorld.java:57: error: illegal start of expression
    }
    ^
1 error
